# pr-roast-mcp

./: README.md  pyproject.toml
examples/: generate_screenshots.py  pr81.md  pr84.md  pr87.md  pr89.md  pr90.md
pr_roast_mcp/: server.py
